@@ -3,6 +3,8 @@
 * Removed REST api support from `Client`.
 * Added `abort` function.
 * Added `normalizer` argument to `casefold` function.
+* Added `new_id` function.
+* Deprecated `next_id` function in favor of `new_id`.
 
 2.4.0
 * Handle HTTP errors 502 and 504 as `Fauna::UnavailableError`.
